--- a/TutorLink/TutorLinkAPI/TutorLinkAPI.csproj
+++ b/TutorLink/TutorLinkAPI/TutorLinkAPI.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="7.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.19"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.19" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.19">
@@ -23,10 +24,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="BusinessLogics\Helper\" />
-      <Folder Include="BusinessLogics\IServices\" />
-      <Folder Include="BusinessLogics\Services\" />
-      <Folder Include="Controllers\" />
       <Folder Include="ViewModel\" />
     </ItemGroup>
 
