--- a/TutorLink/TutorLinkAPI/appsettings.json
+++ b/TutorLink/TutorLinkAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Local": "Server=localhost;Database=TutorLinkDB;uid=sa;pw=Trongtin1701;"
+    "Local": "Server=DESKTOP-T0GF907\\SQLEXPRESS;Database=TutorLinkDB;User Id=sa;Password=123;TrustServerCertificate=true;"
   },
 
   "AllowedHosts": "*"
